# backend/internal/generated/api/openapi.yaml
@@ -823,6 +823,9 @@ components:
     EventSummary:
       example:
         venue: venue
+        allowed_roles:
+        - null
+        - null
         event_id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
         schedule_deadline: 2000-01-23T04:56:07.000+00:00
         created_at: 2000-01-23T04:56:07.000+00:00
@@ -853,6 +856,11 @@ components:
         organizer_name:
           description: 主催者名
           type: string
+        allowed_roles:
+          description: 参加可能な役割
+          items:
+            $ref: '#/components/schemas/UserRole'
+          type: array
         confirmed_date:
           description: 確定した日程
           format: date-time
@@ -976,6 +984,9 @@ components:
       example:
         data:
         - venue: venue
+          allowed_roles:
+          - null
+          - null
           event_id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
           schedule_deadline: 2000-01-23T04:56:07.000+00:00
           created_at: 2000-01-23T04:56:07.000+00:00
@@ -984,6 +995,9 @@ components:
           title: title
           status: DRAFT
         - venue: venue
+          allowed_roles:
+          - null
+          - null
           event_id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
           schedule_deadline: 2000-01-23T04:56:07.000+00:00
           created_at: 2000-01-23T04:56:07.000+00:00
