# backend/internal/generated/go/model_event_summary.go
@@ -31,6 +31,9 @@ type EventSummary struct {
 	// 主催者名
 	OrganizerName string `json:"organizer_name"`
 
+	// 参加可能な役割
+	AllowedRoles []string `json:"allowed_roles,omitempty"`
+
 	// 確定した日程
 	ConfirmedDate time.Time `json:"confirmed_date,omitempty"`
 
